--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
+pandas==2.1.3
+numpy==1.26.2
+scikit-learn==1.3.2
+xgboost==2.0.2
 python-dotenv>=1.0.0
 joblib>=1.3.0
-jupyter>=1.0.0
-matplotlib>=3.7.0
 seaborn>=0.12.0
-ipykernel>=6.0.0 
-xgboost>=1.7.0
+ipykernel>=6.0.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.2
+requests==2.31.0
