--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
-pandas==2.1.3
-numpy==1.26.2
-scikit-learn==1.3.2
-xgboost==2.0.2
-python-dotenv>=1.0.0
+# Core ML and Data Processing
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
 joblib>=1.3.0
+
+# API and Web Server
+fastapi>=0.100.0
+uvicorn>=0.23.0
+pydantic>=2.0.0
+
+# Visualization
+matplotlib>=3.7.0
 seaborn>=0.12.0
-ipykernel>=6.0.0
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.2
-requests==2.31.0
-sagemaker==2.160.0
-boto3==1.35.10
+
+# AWS SageMaker (for future deployment)
+sagemaker>=2.180.0
+boto3>=1.28.0
+
+# Utilities
+python-dotenv>=1.0.0
+requests>=2.31.0
+pytest>=7.4.0  # for testing
+black>=23.7.0  # for code formatting
+flake8>=6.1.0  # for linting
