--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 # Core ML and Data Processing
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-xgboost>=2.0.0
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.2
+xgboost>=2.0.2
+catboost>=1.2.2
 joblib>=1.3.0
 
 # API and Web Server
-fastapi>=0.100.0
-uvicorn>=0.23.0
-pydantic>=2.0.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+pydantic>=2.4.2
 
 # Visualization
 matplotlib>=3.7.0
@@ -24,3 +25,7 @@ requests>=2.31.0
 pytest>=7.4.0  # for testing
 black>=23.7.0  # for code formatting
 flake8>=6.1.0  # for linting
+python-multipart>=0.0.6
+shap>=0.43.0
+optuna>=3.3.0
+category_encoders>=2.6.1
